# slopscope

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
docs/: README.md  configuration.md  migration.md  product-requirements.md  release.md  roadmap.md  tasks.md
src/slopscope/: __init__.py  classify.py  cli.py  cloc.py  config.py  fallback.py  paths.py  profile.py  project.py  render.py  report.py
tests/: test_classify.py  test_cli.py  test_cloc.py  test_config.py  test_fallback.py  test_migration_fixtures.py  test_profile.py  test_project.py  test_render.py  test_report.py
