[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slopscope"
version = "0.0.0"
description = "Repository line-count reports with cloc support and a Python fallback."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "slopscope contributors" },
]
keywords = ["cloc", "lines-of-code", "repository", "metrics"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
slopscope = "slopscope.cli:main"
count-lines-of-code = "slopscope.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/slopscope"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/slopscope", "tests"]
